--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('resumen') }}">
+                            <i class="fas fa-calendar-week me-1"></i>
+                            Resumen
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('reportes') }}">
                             <i class="fas fa-chart-bar me-1"></i>
                             Reportes
