--- a/templates/resumen.html
+++ b/templates/resumen.html
@@ -52,8 +52,8 @@
     </div>
 </div>
 
-<!-- Resumen por Variedad -->
-{% for semana, variedades in datos.items()|sort(reverse=True) %}
+<!-- Resumen por Producto Maestro → Variedad -->
+{% for semana, productos in datos.items()|sort(reverse=True) %}
 <div class="card mb-4">
     <div class="card-header bg-success text-white">
         <h5 class="mb-0">
@@ -62,6 +62,16 @@
         </h5>
     </div>
     <div class="card-body p-0">
+        {% for producto_maestro, variedades in productos.items()|sort %}
+        <div class="border-bottom">
+            <!-- Encabezado del Producto Maestro -->
+            <div class="bg-primary text-white p-3">
+                <h5 class="mb-0">
+                    <i class="fas fa-box me-2"></i>
+                    {{ producto_maestro }}
+                    <span class="badge bg-light text-primary ms-2">{{ variedades|length }} variedad(es)</span>
+                </h5>
+            </div>
         <div class="table-responsive">
             <table class="table table-sm table-hover mb-0">
                 <thead class="table-light">
@@ -104,14 +114,14 @@
                         </td>
                         <td class="text-center">
                             <button class="btn btn-sm btn-outline-info" type="button" 
-                                    onclick="toggleDetalle('{{ semana }}_{{ variedad|replace(' ', '_') }}')">
-                                <i class="fas fa-chevron-down me-1" id="icon_{{ semana }}_{{ variedad|replace(' ', '_') }}"></i>
-                                <span id="text_{{ semana }}_{{ variedad|replace(' ', '_') }}">Bloques</span>
+                                    onclick="toggleDetalle('{{ semana }}_{{ producto_maestro|replace(' ', '_') }}_{{ variedad|replace(' ', '_') }}')">
+                                <i class="fas fa-chevron-down me-1" id="icon_{{ semana }}_{{ producto_maestro|replace(' ', '_') }}_{{ variedad|replace(' ', '_') }}"></i>
+                                <span id="text_{{ semana }}_{{ producto_maestro|replace(' ', '_') }}_{{ variedad|replace(' ', '_') }}">Bloques</span>
                             </button>
                         </td>
                     </tr>
                     <!-- Desglose de Módulos (inicialmente oculto) -->
-                    <tr class="collapse" id="detalle_{{ semana }}_{{ variedad|replace(' ', '_') }}">
+                    <tr class="collapse" id="detalle_{{ semana }}_{{ producto_maestro|replace(' ', '_') }}_{{ variedad|replace(' ', '_') }}">
                         <td colspan="10" class="p-0">
                             <div class="bg-light p-3">
                                 <h6 class="text-info mb-3">
@@ -128,10 +138,10 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% if desglose.get(semana, {}).get(variedad) %}
+                                        {% if desglose.get(semana, {}).get(producto_maestro, {}).get(variedad) %}
                                             {# Recopilar todos los módulos únicos de esta variedad #}
                                             {% set modulos_set = [] %}
-                                            {% for dia_idx, modulos_dict in desglose[semana][variedad].items() %}
+                                            {% for dia_idx, modulos_dict in desglose[semana][producto_maestro][variedad].items() %}
                                                 {% for modulo in modulos_dict.keys() %}
                                                     {% if modulo not in modulos_set %}
                                                         {% set _ = modulos_set.append(modulo) %}
@@ -147,7 +157,7 @@
                                                     {{ modulo }}
                                                 </td>
                                                 {% for i in range(7) %}
-                                                    {% set valor_modulo = desglose[semana][variedad].get(i, {}).get(modulo, 0) %}
+                                                    {% set valor_modulo = desglose[semana][producto_maestro][variedad].get(i, {}).get(modulo, 0) %}
                                                     <td class="text-center">
                                                         {% if valor_modulo > 0 %}
                                                             <span class="badge bg-info">{{ "{:,}".format(valor_modulo) }}</span>
@@ -172,11 +182,11 @@
                     </tr>
                     {% endfor %}
                 </tbody>
-                <tfoot class="table-secondary">
+                <tfoot class="table-info">
                     <tr class="fw-bold">
                         <td>
                             <i class="fas fa-chart-line me-1"></i>
-                            TOTAL SEMANA
+                            TOTAL {{ producto_maestro }}
                         </td>
                         {% for i in range(7) %}
                             {% set total_dia = namespace(value=0) %}
@@ -203,6 +213,8 @@
                 </tfoot>
             </table>
         </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
 {% endfor %}
