--- a/templates/resumen.html
+++ b/templates/resumen.html
@@ -76,7 +76,7 @@
             <table class="table table-sm table-hover mb-0">
                 <thead class="table-light">
                     <tr>
-                        <th style="min-width: 200px;">
+                        <th style="min-width: 200px; position: sticky; left: 0; background-color: #f8f9fa; z-index: 10;">
                             <i class="fas fa-seedling me-1"></i>
                             Variedad
                         </th>
@@ -95,7 +95,7 @@
                 <tbody>
                     {% for variedad, dias in variedades.items()|sort %}
                     <tr>
-                        <td class="fw-bold">
+                        <td class="fw-bold" style="position: sticky; left: 0; background-color: white; z-index: 9;">
                             <i class="fas fa-leaf me-1 text-success"></i>
                             {{ variedad }}
                         </td>
@@ -184,7 +184,7 @@
                 </tbody>
                 <tfoot class="table-info">
                     <tr class="fw-bold">
-                        <td>
+                        <td style="position: sticky; left: 0; background-color: #d1ecf1; z-index: 9;">
                             <i class="fas fa-chart-line me-1"></i>
                             TOTAL {{ producto_maestro }}
                         </td>
